--- a/index.html
+++ b/index.html
@@ -135,6 +135,65 @@
             </div>
           </section>
 
-  <script src="./script.js"></script>    
+          <!-- Who We Are -->
+          <section class="team">
+            <div class="section-header">
+              <h1 class="section-heading">Our Team</h1>
+              <div class="underline"></div>
+            </div>
+            <div class="cards-wrapper">
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-1.jpg" alt="CEO" />
+                </div>
+                <div class="card-info">
+                  <h2>John Smith</h2>
+                  <h3>CEO</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-2.jpg" alt="Designer" />
+                </div>
+                <div class="card-info">
+                  <h2>Ann Brown</h2>
+                  <h3>Designer</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-3.jpg" alt="Architect" />
+                </div>
+                <div class="card-info">
+                  <h2>Mary Doe</h2>
+                  <h3>Architect</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          
+
+          </section>
+        </div>
+        
+  <script src="./script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="./tilt.js"></script>    
  </body>
 </html> 
