--- a/index.html
+++ b/index.html
@@ -187,10 +187,30 @@
             </div>
           </section>
 
-          
-
+          <!-- Contact Us -->
+          <section class="contact">
+            <div class="contact-wrapper">
+              <div class="contact-left"></div>
+              <div class="contact-right">
+                <h1 class="contact-heading">Contact</h1>
+                <form>
+                  <div class="input-group">
+                    <input type="text" class="field" />
+                    <label class="input-label">Full Name</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="email" class="field" />
+                    <label class="input-label">Email</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field"></textarea>
+                    <label class="message">Message</label>
+                  </div>
+                  <input type="submit" class="submit-btn" value="Submit" />
+                </form>
+              </div>
+            </div>
           </section>
-        </div>
         
   <script src="./script.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
