--- a/Architecture-Website/index.html
+++ b/Architecture-Website/index.html
@@ -68,66 +68,66 @@
                   <i class="fas fa-pen-nib"></i>
                   <h3>Interior</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="service">
                 <div class="service-header">
                   <i class="fas fa-paint-roller"></i>
                   <h3>Exterior</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="service">
                 <div class="service-header">
                   <i class="fas fa-pencil-alt"></i>
                   <h3>Design</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="service">
                 <div class="service-header">
                   <i class="fas fa-paint-brush"></i>
                   <h3>Decoration</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="service">
                 <div class="service-header">
                   <i class="fas fa-ruler-combined"></i>
                   <h3>Planning</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="service">
                 <div class="service-header">
                   <i class="far fa-building"></i>
                   <h3>Execution</h3>
                 </div>
-                <p class="service-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Doloremque, officia! Necessitatibus delectus sed dicta corrupti
-                  voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
-                </p>
+                  <p class="service-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Doloremque, officia! Necessitatibus delectus sed dicta corrupti
+                    voluptatibus, omnis eius vel ab magni nemo, incidunt esse! Quod!
+                  </p>
               </div>
               <div class="about-us-img-wrapper">
                 <img src="./img/house.png" />
@@ -135,6 +135,85 @@
             </div>
           </section>
 
-  <script src="./script.js"></script>    
+          <!-- Who We Are -->
+          <section class="team">
+            <div class="section-header">
+              <h1 class="section-heading">Our Team</h1>
+              <div class="underline"></div>
+            </div>
+            <div class="cards-wrapper">
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-1.jpg" alt="CEO" />
+                </div>
+                <div class="card-info">
+                  <h2>John Smith</h2>
+                  <h3>CEO</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-2.jpg" alt="Designer" />
+                </div>
+                <div class="card-info">
+                  <h2>Ann Brown</h2>
+                  <h3>Designer</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+              <div class="card" data-tilt>
+                <div class="card-img-wrapper">
+                  <img src="img/person-3.jpg" alt="Architect" />
+                </div>
+                <div class="card-info">
+                  <h2>Mary Doe</h2>
+                  <h3>Architect</h3>
+                  <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores, impedit!"
+                  </p>
+                  <button>Read More</button>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <!-- Contact Us -->
+          <section class="contact">
+            <div class="contact-wrapper">
+              <div class="contact-left"></div>
+              <div class="contact-right">
+                <h1 class="contact-heading">Contact</h1>
+                <form>
+                  <div class="input-group">
+                    <input type="text" class="field" />
+                    <label class="input-label">Full Name</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="email" class="field" />
+                    <label class="input-label">Email</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field"></textarea>
+                    <label class="message">Message</label>
+                  </div>
+                  <input type="submit" class="submit-btn" value="Submit" />
+                </form>
+              </div>
+            </div>
+          </section>
+        
+  <script src="./script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="./tilt.js"></script>    
  </body>
 </html> 
